--- a/css/global.css
+++ b/css/global.css
@@ -11,6 +11,9 @@
 
 body {
     font-size: 13px;
-    font-family: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    padding: 0;
+    margin: 0;
 }
+
 
