--- a/css/banner.css
+++ b/css/banner.css
@@ -3,7 +3,7 @@
     background-attachment: fixed;
     font-family: "Bebas Neue", sans-serif;
     width: 100%;
-    height: 150vh;
+    height: 120vh;
     margin: 0;
     padding: 0;
     background-position: top center;
@@ -16,7 +16,7 @@
     background-color: rgba(5, 0, 62, 0.7);
     background-attachment: fixed;
     width: 100%;
-    height: 150vh;
+    height: 120vh;
     position: absolute;
     margin: 0;
     padding: 0;
@@ -64,7 +64,7 @@
     background-position: center center;
     background-repeat: no-repeat;
     position: absolute;
-    width: 280px;
+    width: 260px;
     height: 80px;
     top: 40px;
     left: 460px;
@@ -85,12 +85,22 @@
 }
 
 .banner__button {
-    color: white;
     cursor: pointer;
     background-color: var(--color-accent);
     border: none;
     padding: 18px 55px;
+    transition: 0.5s;
+}
+
+.banner__button:hover {
+    background-color: var(--color-dark-accent);
+    border: none;
+}
+
+.banner__button-link {
+    color: white;
     text-transform: uppercase;
+    text-decoration: none;
     font-size: 14px;
     font-weight: bold;
 }
