--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,5 +1,6 @@
 .gallery__full-width {
-    margin: 100px 0;
+    margin-top: 100px;
+    margin-bottom: 0;
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -12,7 +13,7 @@
     background-color: rgba(5, 0, 62, 0.7);
     height: 500px;
     width: 100%;
-    position: abolute;
+    position: relative;
 }
 
 .gallery__text {
@@ -32,7 +33,6 @@
     font-size: 26px;
     font-weight: bold;
     text-transform: uppercase;
-    right:
 }
 
 .gallery__text-haeder::before {
