--- a/css/global.css
+++ b/css/global.css
@@ -8,6 +8,8 @@
     --color-accent: #1fe8cd;
     --color-dark-accent: #17a895;
     --color-light: #f5f5f5;
+    --color-dark-light: #e6e6e6;
+    --color-grey: #c9c9c9;
 }
 
 body {
