--- a/css/global.css
+++ b/css/global.css
@@ -7,14 +7,14 @@
     --color-primary: #535353;
     --color-accent: #1fe8cd;
     --color-dark-accent: #17a895;
-    --color-light: #f5f5f5;
-    --color-dark-light: #e6e6e6;
+    --color-light: #f0f0f0;
+    --color-dark-light: #e2e2e2;
     --color-grey: #c9c9c9;
 }
 
 body {
     font-size: 13px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", Helvetica, Arial, sans-serif;
     padding: 0;
     margin: 0;
 }
