--- a/css/banner.css
+++ b/css/banner.css
@@ -12,6 +12,26 @@
     z-index: 0;
 }
 
+@media (min-width: 991px) {
+    .banner {
+        height: 110vh;
+    }
+}
+
+@media (max-width: 768px) {
+    .banner {
+        height: 90vh;
+        min-height: auto;
+    }
+}
+
+@media (max-width: 399px) {
+    .banner {
+        background-attachment: fixed;
+        height: 110vh;
+    }
+}
+
 .banner__color {
     background-color: rgba(5, 0, 62, 0.7);
     background-attachment: fixed;
@@ -21,6 +41,24 @@
     margin: 0;
     padding: 0;
     z-index: 1;
+}
+
+@media (min-width: 991px) {
+    .banner__color {
+        height: 110vh;
+    }
+}
+
+@media (max-width: 768px) {
+    .banner__color {
+        height: 90vh;
+    }
+}
+
+@media (max-width: 399px) {
+    .banner__color {
+        height: 110vh;
+    }
 }
 
 .banner__text {
@@ -43,7 +81,24 @@
     text-transform: uppercase;
     line-height: 1;
     margin-bottom: -10px;
+}
 
+@media (max-width: 1024px) {
+    .banner__text1 {
+        padding-top: 80px;
+    }
+}
+
+@media (max-width: 768px) {
+    .banner__text1 {
+        font-size: 100px;
+    }
+}
+
+@media (max-width: 399px) {
+    .banner__text1 {
+        font-size: 96px;
+    }
 }
 
 .banner__text2 {
@@ -55,6 +110,18 @@
     padding: 0;
     position: relative;
     margin-bottom: 5px;
+}
+
+@media (min-width: 768px) {
+    .banner__text2 {
+        font-size: 72px;
+    }
+}
+
+@media (max-width: 399px) {
+    .banner__text2 {
+        font-size: 48px;
+    }
 }
 
 .banner__text2::before {
@@ -70,6 +137,20 @@
     z-index: 999;
 }
 
+@media (max-width: 768px) {
+    .banner__text2::before {
+        left: 300px;
+        top: 55px;
+    }
+}
+
+@media (max-width: 399px) {
+    .banner__text2::before {
+        left: 40px;
+        top: 5px;
+    }
+}
+
 .banner__text3 {
     font-family: "Open Sans", sans-serif;
     text-transform: uppercase;
@@ -77,10 +158,24 @@
     font-weight: bold;
 }
 
+@media (max-width: 399px) {
+    .banner__text3 {
+        margin-top: 35px;
+    }
+}
+
 .banner__paragraph {
     font-family: "Open Sans", sans-serif;
     font-size: 18px;
     margin-bottom: 15px;
+}
+
+@media (max-width: 399px) {
+    .banner__paragraph {
+        font-family: "Open Sans", sans-serif;
+        font-size: 18px;
+        margin-bottom: 60px;
+    }
 }
 
 .banner__button {
