--- a/css/container.css
+++ b/css/container.css
@@ -1,4 +1,32 @@
 .container {
-    width: 1124px;
+    max-width: 1140px;
+    width: 100%;
     margin: 0 auto;
+}
+
+@media (max-width: 1024px) {
+    .container {
+        max-width: 970px;
+        width: 100%;
+        margin: 0 auto;
+        padding: 0 15px;
+    }
+}
+
+@media (max-width: 768px) {
+    .container {
+        max-width: 750px;
+        width: 100%;
+        margin: 0 auto;
+        padding: 0 15px;
+    }
+}
+
+@media (max-width: 399px) {
+    .container {
+        max-width: 375px;
+        width: 100%;
+        margin: 0 auto;
+        padding: 0 15px;
+    }
 }
