--- a/css/counter.css
+++ b/css/counter.css
@@ -1,10 +1,25 @@
 .counter {
     background-color: var(--color-accent);
     width: 100%;
-    height: 240px;
+    max-width: 1140px;
+    height: auto;
     top: -80px;
     position: relative;
     z-index: 999;
+}
+
+@media (max-width: 1024px) {
+    .counter {
+        max-width: 970;
+        margin: 0 auto;
+    }
+}
+
+@media (max-width: 399px) {
+    .counter {
+        max-width: 375;
+        margin: 0 auto;
+    }
 }
 
 .counter__inner {
@@ -26,6 +41,13 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    padding-bottom: 40px;
+}
+
+@media (max-width: 399px) {
+    .counter__items {
+        flex-wrap: wrap;
+    }
 }
 
 .counter__item {
